# freesend-sdk

./: README.md  pyproject.toml
freesend/: __init__.py  client.py  django.py
