[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freesend"
version = "0.1.0"
description = "Python SDK and Django email backend for Freesend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
django = [
    "django>=4.0",
]

[project.urls]
Repository = "https://github.com/hamptus/freesend-sdk"
